<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Czech Stocks</string>
    <string name="tab_title_section1">Quotes</string>
    <string name="tab_title_section2">Portfolio</string>
    <string name="action_edit">Edit</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="add_stocks_dialog_title">Add Quotes to List</string>
    <string name="add_portfolio_item_dialog_title">Add Portfolio Item</string>
    <string name="remove_title">Remove</string>
    <string name="edit_remove_title">Edit or Remove</string>
    <string name="remove_stock_from_quotes_list">Remove %1$s from the quotes list?</string>
    <string name="button_ok">OK</string>
    <string name="button_save">Save</string>
    <string name="button_remove">Remove</string>
    <string name="button_cancel">Cancel</string>
    <string name="choose_stock_prompt">Pick a stock</string>
    <string name="number_of_stocks_hint">Number of stocks</string>
    <string name="number_of_stocks_null">Number of stocks was not filled</string>
    <string name="average_price_hint">Average price</string>
    <string name="average_price_null">Average price was not filled</string>
    <string name="currency">CZK</string>
    <string name="no_data_portfolio">Add items to portfolio by taping the + icon.</string>
    <string name="toas_check_net">Network error, check your internet connection</string>
    <string name="no_data_stocks_list">Attempting to download stock quotes from server. If this lasts too long, check your Intenet connection.</string>
    <string name="last_updated">Last updated:</string>
    <string name="data_from">Data from:</string>

    <plurals name="pieces_bought_at">
        <item quantity="one">pc at</item>
        <item quantity="other">pcs at</item>
    </plurals>

    <string-array name="default_quotes_list">
        <item>BMG200452024</item> <!-- CETV -->
        <item>CZ0005112300</item> <!-- ČEZ -->
        <item>CZ0005123620</item> <!-- E4U -->
        <item>AT0000652011</item> <!-- ERSTE GROUP BANK -->
        <item>NL0009604859</item> <!-- FORTUNA -->
        <item>CZ0008019106</item> <!-- KOMERČNÍ BANKA -->
        <item>GB00B42CTW68</item> <!-- NWR -->
        <item>LU0122624777</item> <!-- ORCO -->
        <item>LU0275164910</item> <!-- PEGAS NONWOVENS -->
        <item>CS0008418869</item> <!-- PHILIP MORRIS ČR -->
        <item>CZ0005124420</item> <!-- PLG -->
        <item>GB00BF5SDZ96</item> <!-- STOCK -->
        <item>CZ0009093209</item> <!-- TELEFÓNICA C.R. -->
        <item>SK1120010287</item> <!-- TMR -->
        <item>CZ0009091500</item> <!-- UNIPETROL -->
        <item>AT0000908504</item> <!-- VIG -->
    </string-array>

</resources>