<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ListView
        android:id="@id/android:list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawSelectorOnTop="false"
        android:gravity="center" />

    <TextView
        android:id="@id/android:empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_data_portfolio" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FF24292F"
        android:orientation="horizontal"
        android:textAppearance="?android:textAppearanceSmall" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lastUpdatedLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_updated" />

            <TextView
                android:id="@+id/dataFromLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_from" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5sp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/lastUpdatedValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />

            <TextView
                android:id="@+id/dataFromValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>